--- a/.vscode/app/style.css
+++ b/.vscode/app/style.css
@@ -414,3 +414,98 @@ footer a:hover { text-decoration: underline; }
     padding: 2rem 0;
     border-top: 1px solid #e0e0e0;
 }
+
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {
+    display: none;
+    position: relative;
+}
+
+
+/* Slideshow container */
+.slideshow-container {
+  object-fit: cover;
+  position: relative;
+  margin: auto;
+}
+
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.slideshow-text {
+  color: #f2f2f2;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+/* .slideshow-text{
+color: #fff;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 12px 24px;
+  position: absolute;
+  bottom: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5); 
+  border-radius: 10px;
+} 
+*/
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 0.5s;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+@media screen and (max-width: 768px) {
+  .slideshow-container img {
+    height: 250px;
+  }
+
+  .nav-links a {
+    display: block;
+    margin: 5px 0;
+  }
+
+}
